# rust-grpc

./: Cargo.toml  build.rs
proto/: search_service.proto
src/: main.rs
