[package]
name = "rust-protolol"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"            # For generating protobuf code
prost-types = "0.13.3"      # For handling well-known protobuf types

tonic = { version = "0.12.3", features = ["transport"] }
tonic-build = "0.12.3"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.12.3"      # For generating both protobuf and gRPC service code
